fix: removing left marging to align sidebar to full width

--- a/src/release-notes/ReleaseNotes.scss
+++ b/src/release-notes/ReleaseNotes.scss
@@ -36,8 +36,6 @@
     top: 0;
     height: 100vh;
     overflow-y: auto;
-    max-width: 320px;
-    margin-left: auto;
 
     a {
         font-size: 12px;
